gateway/multi-route-gateway/baz-httproute.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: baz-route
  namespace: gateway-demo
spec:
  hosts:
  - hostnames: ["baz.com"]
    rules:
    - match:
        path: /store
      action:
        forwardTo:
        - targetRef:
            name: baz-svc
    - match:
        path: /profile
      action:
        forwardTo:
        - targetRef:
            name: baz-svc
